--- a/client/client/src/components/Auth/style.css
+++ b/client/client/src/components/Auth/style.css
@@ -1,13 +1,23 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700,800,900');
 
+
+.container{
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
 .firstDiv{
 	font-family: 'Poppins', sans-serif;
 	font-weight: 300;
 	font-size: 15px;
 	line-height: 1.7;
 	color: white;
-	background-color: #432874;
-	overflow-x: hidden;
+	background: linear-gradient(120deg, #432874,#9687DB);
+  border-radius: 30px;
+  height: 88vh;
 }
 
 a {
@@ -87,8 +97,9 @@ h6 span{
 
 
 .card-3d-wrap {
+
   position: relative;
-  width: 440px;
+  width: 450px;
   max-width: 100%;
   height: 400px;
   -webkit-transform-style: preserve-3d;
@@ -116,7 +127,7 @@ h6 span{
   background-repeat: no-repeat;
   background-size: 300%;
   position: absolute;
-  border-radius: 6px;
+  border-radius: 20px;
   /* border: 10px solid #333 !important; */
   left: 0;
   top: 0;
@@ -138,7 +149,7 @@ h6 span{
   width: 100%;
   padding: 0 35px;
   top: 50%;
-  left: 0;
+  left: -8%;
   transform: translate3d(0, -50%, 35px) perspective(100px);
   z-index: 20;
   display: block;
@@ -152,18 +163,19 @@ h6 span{
     padding: 0;
 }
 .form-style {
+  margin-block: 10px;
   padding: 13px 20px;
   padding-left: 55px;
-  height: 48px;
-  width: 100%;
+  height: 30px;
+  width: 70%;
   font-weight: 500;
   border-radius: 4px;
   font-size: 14px;
   line-height: 22px;
   letter-spacing: 0.5px;
   outline: none;
-  color: #c4c3ca;
-  background-color: #333;
+  color: #333;
+  background-color: #FFFFFF;
   border: none;
   -webkit-transition: all 200ms linear;
   transition: all 200ms linear;
@@ -189,25 +201,25 @@ h6 span{
 }
 
 .form-group input:-ms-input-placeholder  {
-  color: #c4c3ca;
+  color: #333;
   opacity: 0.7;
   -webkit-transition: all 200ms linear;
     transition: all 200ms linear;
 }
 .form-group input::-moz-placeholder  {
-  color: #c4c3ca;
+  color: #333;
   opacity: 0.7;
   -webkit-transition: all 200ms linear;
     transition: all 200ms linear;
 }
 .form-group input:-moz-placeholder  {
-  color: #c4c3ca;
+  color: #333;
   opacity: 0.7;
   -webkit-transition: all 200ms linear;
     transition: all 200ms linear;
 }
 .form-group input::-webkit-input-placeholder  {
-  color: #c4c3ca;
+  color: #333;
   opacity: 0.7;
   -webkit-transition: all 200ms linear;
     transition: all 200ms linear;
@@ -234,6 +246,7 @@ h6 span{
 }
 
 .btn{
+  margin-block: 10px;
   border-radius: 4px;
   height: 44px;
   font-size: 13px;
@@ -257,9 +270,10 @@ h6 span{
   -ms-flex-pack: center;
   text-align: center;
   border: none;
-  background-color: white;
-  color: #432874;
+  background-color: #432874;
+  color: white;
   box-shadow: 0 8px 24px 0 rgba(255,235,167,.2);
+  cursor: pointer;
 }
 .btn:active,
 .btn:focus{
@@ -268,8 +282,8 @@ h6 span{
   box-shadow: 0 8px 24px 0 rgba(16,39,112,.2);
 }
 .btn:hover{
-  background-color: #432874;
-  color: white;
+  background-color: whitesmoke;
+  letter-spacing: 3px;
   box-shadow: 0 8px 24px 0 rgba(18, 3, 30, 0.2);
 }
 /* .letterSpacing{
