--- a/client/client/src/components/Auth/style.css
+++ b/client/client/src/components/Auth/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700,800,900');
+
 
 .container{
 
@@ -12,25 +14,41 @@
 	font-weight: 300;
 	font-size: 15px;
 	line-height: 1.7;
-	color: white;
-	background: #432874;
+	color: #eee;
+    background-image: conic-gradient(#432874 45deg, #9687DB 90deg, #9c27b0 210deg);
   border-radius: 30px;
   height: 88vh;
 }
 
 a {
-	cursor: pointer;
+  cursor: pointer;
   transition: all 200ms linear;
+  text-decoration: none; 
 }
-a:hover {
+/* a:hover {
+    color: #432874;
 	text-decoration: none;
+} */
+.link .linkFirstPart{
+  color: #333;
+  text-decoration: none; 
 }
-.link {
-  color: white;
+.link .linkSecondPart{
+    text-decoration: underline; 
+    color:#432874;
+    font-weight: bold;
+  }
+/* .linkSecondPart{
+    font-weight: bold;
+} */
+.linkSecondPart:hover{
+    color: #432874;
 }
-.link:hover {
-  color: white;
-}
+
+/* .link:hover {
+  color: #432874;
+  font-weight:500;
+} */
 /* p {
   font-weight: 500;
   font-size: 14px;
@@ -60,13 +78,14 @@ h6 span{
 .checkbox:checked + label,
 .checkbox:not(:checked) + label{
   position: relative;
+  top: -10px;
   display: block;
   text-align: center;
   width: 60px;
   height: 16px;
   border-radius: 8px;
   padding: 0;
-  margin: 10px auto;
+  margin:  0px auto;
   cursor: pointer;
   background-color: #eee;
 }
@@ -77,9 +96,10 @@ h6 span{
   width: 36px;
   height: 36px;
   border-radius: 50%;
-  color: white;
-
-  background-color: #9687DB;
+  color: #eee;
+  
+  background-image: linear-gradient(to right, #9c27b0 , #432874);
+  /* background-color: #9687DB; */
   font-family: 'unicons';
   content: '\eb4f';/*'\2196';*/
   z-index: 20;
@@ -121,7 +141,7 @@ h6 span{
 .card-front, .card-back {
   width: 100%;
   height: 100%;
-  background-color: #9687DB;
+  background-color: #eee;
   background-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/1462889/pat.svg');
   background-position: bottom center;
   background-repeat: no-repeat;
@@ -130,7 +150,7 @@ h6 span{
   border-radius: 20px;
   /* border: 10px solid #333 !important; */
   left: 0;
-  top: 0;
+  top: -45px;
   -webkit-transform-style: preserve-3d;
   transform-style: preserve-3d;
   -webkit-backface-visibility: hidden;
@@ -159,6 +179,7 @@ h6 span{
 .form-group{
   position: relative;
   display: block;
+  top: -30px;
     margin: 0;
     padding: 0;
 }
@@ -182,23 +203,26 @@ h6 span{
   transition: all 200ms linear;
   box-shadow: 0 4px 8px 0 rgba(21,21,21,.2);
 }
-.form-style:focus,
+/* .form-style:focus,
 .form-style:active {
   border: none;
   outline: none;
   box-shadow: 0 4px 8px 0 rgba(21,21,21,.2);
-}
+} */
 .input-icon {
   position: absolute;
-  top: 25px;
+  top: 24px;
   left: 50px;
   height: 48px;
   font-size: 24px;
   line-height: 48px;
   text-align: left;
-  color: gray;
-  -webkit-transition: all 200ms linear;
-    transition: all 200ms linear;
+  color: #9c27b0;
+  /* -webkit-transition: all 200ms linear;
+    transition: all 200ms linear; */
+}
+.input-icon1{
+    color: #9c27b0; 
 }
 
 .form-group input:-ms-input-placeholder  {
@@ -245,50 +269,92 @@ h6 span{
   -webkit-transition: all 200ms linear;
     transition: all 200ms linear;
 }
+.form-group input:hover{
+    border:3px solid rgba(0,0,0,0.04); 
+    border-radius: 5px;
+}
+.form-group input:focus{
+    border:3px solid #9c27b0; 
+    border-radius: 4px;
+}
 
 .btn{
-  margin-block: 10px;
+  /* margin-block: 10px;
   border-radius: 4px;
   height: 44px;
   font-size: 13px;
   font-weight: 600;
-  text-transform: uppercase;
-  -webkit-transition : all 200ms linear;
-  transition: all 200ms linear;
-  padding: 0 30px;
+  text-transform: uppercase; */
+
+  /* -webkit-transition : all 200ms linear;
+  transition: all 200ms linear; */
+
+  /* padding: 0 30px; */
   letter-spacing: 1px;
-  display: -webkit-inline-flex;
+  /* display: -webkit-inline-flex;
   display: -ms-inline-flexbox;
   display: inline-flex;
   -webkit-align-items: center;
   -moz-align-items: center;
   -ms-align-items: center;
-  align-items: center;
-  -webkit-justify-content: center;
+  align-items: center; */
+  /* -webkit-justify-content: center;
   -moz-justify-content: center;
   -ms-justify-content: center;
   justify-content: center;
   -ms-flex-pack: center;
   text-align: center;
-  border: none;
-  background-color: #432874;
-  color: white;
+  border: none; */
+  /* background-color: #9687DB; */
+  color: #eee;
   box-shadow: 0 8px 24px 0 rgba(255,235,167,.2);
   cursor: pointer;
 }
+.secondBtn{
+    margin-top: -1.8rem !important;
+}
+
 .btn:active,
 .btn:focus{
-  background-color: #383840;
+  background-color: #333;
   color: white;
   box-shadow: 0 8px 24px 0 rgba(16,39,112,.2);
 }
+
 .btn:hover{
   letter-spacing: 3px;
   box-shadow: 0 8px 24px 0 rgba(18, 3, 30, 0.2);
+  background-color: #432874;
+  transition: all 200ms linear;
 }
 /* .letterSpacing{
     transition: width 7s linear 0.5s;
 } */
 .letterSpacing:hover {
     letter-spacing: 3px;
+    transition: all 200ms linear;
+}
+.title1{
+    margin-top: -2.7rem;
+    margin-left: 43.8%;
+    content: '';
+    height: 2.5px;
+    width: 18px;
+    background-color: #432874;
+    border-radius: 25px;
+}
+.title2{
+    margin-top: 1.2rem;
+    margin-left: 42.9%;
+    content: '';
+    height: 2px;
+    width: 18px;
+    background-color: #432874;
+    border-radius: 25px;
+}
+.labelColor{
+    color:#432874 !important;
+}
+.SignUp1{
+    margin-top: 1rem !important;
 }
