--- a/client/client/src/components/Rewards/styles.css
+++ b/client/client/src/components/Rewards/styles.css
@@ -6,39 +6,19 @@
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
-.pointsCard {
-    border-radius: 2.5rem !important;
-    max-height: 70px;
-    min-width: 200px !important;
-    background-color: #36205db9 !important;
-    justify-content: center !important;
-    align-items: center !important;
-}
-
-.pointsCard .points {
-    font-size: clamp(13px, 2vw, 20px);
-    color: aliceblue;
-    font-weight: 500;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-     position: relative;
-    bottom: 25px;
-    /*margin-left: 5px !important; */
-}
-
 .CardReward {
     border-radius: 1.25rem !important;
-    background-color: #f1f1f1 !important;
+    background-color: #ffffff !important;
     box-shadow: 2px 4px 10px #36205d3b !important;
     max-width: 275px !important;
+    width: 235px !important;
     min-width: 200px !important;
-    padding: 10px;
-    justify-items: center !important;
-    justify-content: center !important;
-
+    padding-left: 10px;
+    padding: 3px;
 }
 
 .CardReward:hover {
-    background-color: #9f77e433 !important;
+    background-color: #fffaffee !important;
     transition: ease-in 0.5s !important;
     transform: scale(1.05);
 }
@@ -46,7 +26,6 @@
 .CardHeaderReward {
     color: #36205d !important;
     font-size: clamp(8px, 0.25vw, 12px) !important;
-    /* margin-bottom: 3px !important; */
     max-height: 30px !important;
 }
 
@@ -56,10 +35,13 @@
     min-width: 100px !important;
 }
 
+.RedeemBTN:disabled{
+    background-color: #818181 !important;
+}
+
 .CardActionsReward {
     margin-top: 10px !important;
     margin-bottom: 6px !important;
-
 }
 
 .CardMediaReward {
@@ -70,10 +52,17 @@
     background-position-x: center !important;
 }
 
+.hoverRewardCardBtn {
+    width: 100% !important;
+    height: 100% !important;
+    display: block !important;
+    text-align: initial !important;
+    border-radius: 20px !important;
+}
+
 .howToGetReward {
     color: #36205d;
     margin-top: 1rem !important;
-
 }
 
 .howToGetReward .RewardDetails {
@@ -84,12 +73,21 @@
 .RewardsCardsContainer {
     display: flex;
     flex-wrap: wrap;
+    gap: 1.2rem;
+    align-items: center !important;
+    justify-content: center !important;
+    background-color: #EBEAEC !important;
+    border: 3px solid #432874 !important;
+    border-radius: 15px !important;
+    padding: 2.5rem !important;
 }
 
 .CoinIconReward {
     margin-top: 0.5rem !important;
     margin-left: 1.5rem !important;
     width: 30px !important;
+    position: relative;
+    top: 4x;
 }
 
 .CoinAmountReward {
@@ -98,10 +96,47 @@
     margin-bottom: 1rem !important;
     color: #36205d !important;
     position: relative;
-    bottom: 5px;
+    bottom: 6px;
 }
 
-.CardGiftcardIconReward{
-    font-size: clamp(25px, 2vw, 30px) !important;
-    color: #fff !important;
+.react-confirm-alert-body {
+    padding: 1rem !important;
+    min-width: 14rem !important;
+}
+
+.btn-confirm-redeem {
+    background-color: #32bd8a !important;
+    font-weight: 700 !important;
+}
+
+.btn-dismiss-redeem {
+    background-color: #36205d !important;
+    font-weight: 600 !important;
+}
+
+.rewardWarnningTitle {
+    color: #36205d !important;
+}
+
+.balanceText {
+    position: relative;
+    width: max-content;
+    font-weight: lighter;
+}
+
+.balanceText::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    background: #432874;
+    animation: balancetyper 2s steps(50) forwards;
+}
+
+@keyframes balancetyper {
+    to {
+        left: 100%;
+    }
 }
