--- a/client/client/src/components/Auth/style.css
+++ b/client/client/src/components/Auth/style.css
@@ -16,7 +16,7 @@
 	color: white;
 	background: #432874;
   border-radius: 30px;
-  border: 5px solid #9687DB;
+  border: 3px solid #9687DB;
   height: 95vh;
 }
 
@@ -28,10 +28,10 @@ a:hover {
 	text-decoration: none;
 }
 .link {
-  color: white;
+  color: #333;
 }
 .link:hover {
-  color: white;
+  color: #333;
 }
 /* p {
   font-weight: 500;
@@ -64,8 +64,8 @@ h6 span{
   position: relative;
   display: block;
   text-align: center;
-  width: 60px;
-  height: 16px;
+  width: 70px;
+  height: 20px;
   border-radius: 8px;
   padding: 0;
   margin: 10px auto;
@@ -85,8 +85,8 @@ h6 span{
   font-family: 'unicons';
   content: '\2196';
   z-index: 20;
-  top: -10px;
-  left: -10px;
+  top: -8px;
+  left: -8px;
   line-height: 36px;
   text-align: center;
   font-size: 2rem;
@@ -123,8 +123,8 @@ h6 span{
 .card-front, .card-back {
   width: 100%;
   height: 100%;
-  border: 5px solid #eee;
-  background-color: #9687DB;
+  background-color: #eee;
+  color: #333;
   background-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/1462889/pat.svg');
   background-position: bottom center;
   background-repeat: no-repeat;
@@ -289,9 +289,10 @@ h6 span{
   letter-spacing: 3px;
   box-shadow: 0 8px 24px 0 rgba(18, 3, 30, 0.2);
 }
-/* .letterSpacing{
+.letterSpacing{
+  color: #333;
     transition: width 7s linear 0.5s;
-} */
+}
 .letterSpacing:hover {
-    letter-spacing: 3px;
+    letter-spacing: 1px;
 }
