--- a/client/client/src/components/Auth/style.css
+++ b/client/client/src/components/Auth/style.css
@@ -1,8 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700,800,900');
 
-
 .container{
-
   display: flex;
   justify-content: center;
   align-items: center;
@@ -15,7 +13,7 @@
 	font-size: 15px;
 	line-height: 1.7;
 	color: #eee;
-    background-image: conic-gradient(#432874 45deg, #9687DB 90deg, #9c27b0 210deg);
+  background-image: conic-gradient(#432874 45deg, #9687DB 90deg, #9c27b0 210deg);
   border-radius: 30px;
   height: 88vh;
 }
@@ -25,43 +23,29 @@ a {
   transition: all 200ms linear;
   text-decoration: none; 
 }
-/* a:hover {
-    color: #432874;
-	text-decoration: none;
-} */
+
 .link .linkFirstPart{
   color: #333;
   text-decoration: none; 
 }
+.linkFirstPart:hover{
+/* color: #432874; */
+font-weight:500;
+
+}
 .link .linkSecondPart{
     text-decoration: underline; 
-    color:#432874;
-    font-weight: bold;
+    color:#333;
+    font-weight: 600;
   }
 /* .linkSecondPart{
     font-weight: bold;
 } */
 .linkSecondPart:hover{
     color: #432874;
+    font-weight:700;
 }
 
-/* .link:hover {
-  color: #432874;
-  font-weight:500;
-} */
-/* p {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.7;
-}
-h4 {
-  font-weight: 600;
-}
-h6 span{
-  padding: 0 20px;
-  text-transform: uppercase;
-  font-weight: 700;
-} */
 .section{
   position: relative;
   width: 100%;
@@ -98,10 +82,9 @@ h6 span{
   border-radius: 50%;
   color: #eee;
   
-  background-image: linear-gradient(to right, #9c27b0 , #432874);
-  /* background-color: #9687DB; */
+  background-image: linear-gradient(to right, #432874 , #9c27b0);
   font-family: 'unicons';
-  content: '\eb4f';/*'\2196';*/
+  content: '\eb4f';
   z-index: 20;
   top: -10px;
   left: -10px;
@@ -114,7 +97,6 @@ h6 span{
 .checkbox:checked + label:before {
   transform: translateX(44px) rotate(-270deg);
 }
-
 
 .card-3d-wrap {
 
@@ -148,7 +130,7 @@ h6 span{
   background-size: 300%;
   position: absolute;
   border-radius: 20px;
-  /* border: 10px solid #333 !important; */
+ 
   left: 0;
   top: -45px;
   -webkit-transform-style: preserve-3d;
@@ -174,7 +156,6 @@ h6 span{
   z-index: 20;
   display: block;
 }
-
 
 .form-group{
   position: relative;
@@ -203,12 +184,7 @@ h6 span{
   transition: all 200ms linear;
   box-shadow: 0 4px 8px 0 rgba(21,21,21,.2);
 }
-/* .form-style:focus,
-.form-style:active {
-  border: none;
-  outline: none;
-  box-shadow: 0 4px 8px 0 rgba(21,21,21,.2);
-} */
+
 .input-icon {
   position: absolute;
   top: 24px;
@@ -272,43 +248,22 @@ h6 span{
 .form-group input:hover{
     border:3px solid rgba(0,0,0,0.04); 
     border-radius: 5px;
+    transition: all 200ms linear;
 }
 .form-group input:focus{
-    border:3px solid #9c27b0; 
+    border:2px solid #9c27b0; 
     border-radius: 4px;
 }
 
 .btn{
-  /* margin-block: 10px;
-  border-radius: 4px;
-  height: 44px;
-  font-size: 13px;
-  font-weight: 600;
-  text-transform: uppercase; */
-
-  /* -webkit-transition : all 200ms linear;
-  transition: all 200ms linear; */
-
-  /* padding: 0 30px; */
   letter-spacing: 1px;
-  /* display: -webkit-inline-flex;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  -webkit-align-items: center;
-  -moz-align-items: center;
-  -ms-align-items: center;
-  align-items: center; */
-  /* -webkit-justify-content: center;
-  -moz-justify-content: center;
-  -ms-justify-content: center;
-  justify-content: center;
-  -ms-flex-pack: center;
-  text-align: center;
-  border: none; */
-  /* background-color: #9687DB; */
+  
   color: #eee;
   box-shadow: 0 8px 24px 0 rgba(255,235,167,.2);
   cursor: pointer;
+}
+.firstBtn{
+  margin-top: 0.5rem !important;
 }
 .secondBtn{
     margin-top: -1.8rem !important;
@@ -317,7 +272,7 @@ h6 span{
 .btn:active,
 .btn:focus{
   background-color: #333;
-  color: white;
+  color: #eee;
   box-shadow: 0 8px 24px 0 rgba(16,39,112,.2);
 }
 
@@ -327,9 +282,7 @@ h6 span{
   background-color: #432874;
   transition: all 200ms linear;
 }
-/* .letterSpacing{
-    transition: width 7s linear 0.5s;
-} */
+
 .letterSpacing:hover {
     letter-spacing: 3px;
     transition: all 200ms linear;
@@ -340,7 +293,7 @@ h6 span{
     content: '';
     height: 2.5px;
     width: 18px;
-    background-color: #432874;
+    background-image: linear-gradient(to right, #432874 , #9c27b0);
     border-radius: 25px;
 }
 .title2{
@@ -349,7 +302,7 @@ h6 span{
     content: '';
     height: 2px;
     width: 18px;
-    background-color: #432874;
+    background-image: linear-gradient(to right, #432874 , #9c27b0);
     border-radius: 25px;
 }
 .labelColor{
