--- a/client/client/src/components/Auth/style.css
+++ b/client/client/src/components/Auth/style.css
@@ -14,7 +14,7 @@
 	font-size: 15px;
 	line-height: 1.7;
 	color: white;
-	background: #432874;
+	background-image: conic-gradient(#432874 45deg, #9687DB 90deg, #9c27b0 210deg);
   border-radius: 30px;
   border: 3px solid #9687DB;
   height: 95vh;
@@ -81,9 +81,9 @@ h6 span{
   border-radius: 50%;
   color: white;
 
-  background-color: #9687DB;
+  background-image: linear-gradient(to right, #432874,#9c27b0 );
   font-family: 'unicons';
-  content: '\2196';
+  content: '\eb4f';
   z-index: 20;
   top: -8px;
   left: -8px;
@@ -199,7 +199,7 @@ h6 span{
   font-size: 24px;
   line-height: 48px;
   text-align: left;
-  color: gray;
+  color: #9c27b0;
   -webkit-transition: all 200ms linear;
     transition: all 200ms linear;
 }
@@ -274,7 +274,7 @@ h6 span{
   -ms-flex-pack: center;
   text-align: center;
   border: none;
-  background-color: #432874;
+  background-color: #9c27b0;
   color: white;
   box-shadow: 0 8px 24px 0 rgba(255,235,167,.2);
   cursor: pointer;
@@ -288,11 +288,12 @@ h6 span{
 .btn:hover{
   letter-spacing: 3px;
   box-shadow: 0 8px 24px 0 rgba(18, 3, 30, 0.2);
+  background-color: #432874
 }
 .letterSpacing{
   color: #333;
-    transition: width 7s linear 0.5s;
+    transition: all .5s ease-out;
 }
 .letterSpacing:hover {
-    letter-spacing: 1px;
+    transform: scale(1.1)
 }
