--- a/client/client/src/components/Rewards/styles.css
+++ b/client/client/src/components/Rewards/styles.css
@@ -140,3 +140,16 @@
         left: 100%;
     }
 }
+
+.OwnedDetails {
+    font-weight: 800 !important;
+    font-size: 1.2rem !important;
+    color: #32bd8a !important;
+    position: relative !important;
+    top: 12px !important;
+}
+
+.OwnedDetails span {
+    position: relative !important;
+    bottom: 12px !important;
+}
